// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`controlData buildControlData - disabled properties for noStableId 1`] = `
Object {
  "id": "",
  "name": "sap.m.Button",
  "properties": Array [
    Object {
      "editor": "input",
      "isEnabled": false,
      "isIcon": true,
      "name": "activeIcon",
      "readableName": "Active Icon",
      "type": "string",
      "ui5Type": "sap.ui.core.URI",
      "value": undefined,
    },
    Object {
      "editor": "dropdown",
      "isEnabled": false,
      "name": "ariaHasPopup",
      "options": Array [
        Object {
          "key": "None",
          "text": "None",
        },
        Object {
          "key": "Menu",
          "text": "Menu",
        },
        Object {
          "key": "ListBox",
          "text": "ListBox",
        },
      ],
      "readableName": "Aria Has Popup",
      "type": "string",
      "ui5Type": "sap.ui.core.aria.HasPopup",
      "value": undefined,
    },
    Object {
      "editor": "checkbox",
      "isEnabled": false,
      "name": "blocked",
      "readableName": "Blocked",
      "type": "boolean",
      "ui5Type": undefined,
      "value": undefined,
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "name": "busyIndicatorDelay",
      "readableName": "Busy Indicator Delay",
      "type": "integer",
      "ui5Type": undefined,
      "value": undefined,
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "isIcon": false,
      "name": "fieldGroupIds",
      "readableName": "Field Group Ids",
      "type": "string",
      "ui5Type": undefined,
      "value": undefined,
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "name": "test",
      "readableName": "Test",
      "type": "float",
      "ui5Type": undefined,
      "value": undefined,
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "isIcon": false,
      "name": "text",
      "readableName": "Text",
      "type": "string",
      "ui5Type": undefined,
      "value": undefined,
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "isIcon": false,
      "name": "width",
      "readableName": "Width",
      "type": "string",
      "ui5Type": "sap.ui.core.CSSSize",
      "value": undefined,
    },
  ],
  "type": "sap.m.Button",
}
`;

exports[`controlData buildControlData 1`] = `
Object {
  "id": "testID",
  "name": "sap.m.Button",
  "properties": Array [
    Object {
      "editor": "input",
      "isEnabled": false,
      "isIcon": true,
      "name": "activeIcon",
      "readableName": "Active Icon",
      "type": "string",
      "ui5Type": "sap.ui.core.URI",
      "value": "",
    },
    Object {
      "editor": "dropdown",
      "isEnabled": false,
      "name": "ariaHasPopup",
      "options": Array [
        Object {
          "key": "None",
          "text": "None",
        },
        Object {
          "key": "Menu",
          "text": "Menu",
        },
        Object {
          "key": "ListBox",
          "text": "ListBox",
        },
      ],
      "readableName": "Aria Has Popup",
      "type": "string",
      "ui5Type": "sap.ui.core.aria.HasPopup",
      "value": "None",
    },
    Object {
      "editor": "checkbox",
      "isEnabled": true,
      "name": "blocked",
      "readableName": "Blocked",
      "type": "boolean",
      "ui5Type": undefined,
      "value": "testModel>testValue/value",
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "name": "busyIndicatorDelay",
      "readableName": "Busy Indicator Delay",
      "type": "integer",
      "ui5Type": undefined,
      "value": 1000,
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "isIcon": false,
      "name": "fieldGroupIds",
      "readableName": "Field Group Ids",
      "type": "string",
      "ui5Type": undefined,
      "value": Array [],
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "name": "test",
      "readableName": "Test",
      "type": "float",
      "ui5Type": undefined,
      "value": "1.73",
    },
    Object {
      "editor": "input",
      "isEnabled": true,
      "isIcon": false,
      "name": "text",
      "readableName": "Text",
      "type": "string",
      "ui5Type": undefined,
      "value": "",
    },
    Object {
      "editor": "input",
      "isEnabled": false,
      "isIcon": false,
      "name": "width",
      "readableName": "Width",
      "type": "string",
      "ui5Type": "sap.ui.core.CSSSize",
      "value": "",
    },
  ],
  "type": "sap.m.Button",
}
`;
